meta-digi-arm: disable Vigiles CVE report generation by default
For now, we're only interested in generating the SBOM, which we can upload and
have Vigiles scan later on if needed. The report generation process adds some
overhead and can cause unwanted errors if the Vigiles server takes too long.

Enable report generation for our automated builds.

Signed-off-by: Gabriel Valcazar <gabriel.valcazar@digi.com>

--- a/meta-digi-arm/conf/layer.conf
+++ b/meta-digi-arm/conf/layer.conf
@@ -46,3 +46,6 @@ LICENSE_PATH += "${LAYERDIR}/custom-licenses"
 DIGI_MTK_GIT ?= "git://stash.digi.com"
 DIGI_PKG_SRC ?= "https://ftp1.digi.com/support/digiembeddedyocto/source"
 DIGI_GITHUB_GIT ?= "git://github.com/digi-embedded"
+
+# Disable CVE report generation by default
+do_vigiles_check[noexec] = "1"
