ccmp15: add DT overlay for the UART7 for the CCMP15-DVK
Signed-off-by: Arturo Buzarra <arturo.buzarra@digi.com>

--- a/meta-digi-arm/conf/machine/ccmp15-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp15-dvk.conf
@@ -46,6 +46,7 @@ STM32MP_KERNEL_DEVICETREE:ccmp15-dvk += " \
     _ov_board_mikroe-accel2-click_ccmp15-dvk.dtbo \
     _ov_board_mikroe-gyro-click_ccmp15-dvk.dtbo \
     _ov_board_mikroe-i2c-to-spi-click_ccmp15-dvk.dtbo \
+    _ov_board_uart7_rs232_ccmp15-dvk.dtbo \
     _ov_som_bt_ccmp15.dtbo \
     _ov_som_wifi_ccmp15.dtbo \
 "
