ccimx8m: add overlay for Fusion 10 display
Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx8mm-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccimx8mm-dvk.conf
@@ -29,6 +29,7 @@ KERNEL_DEVICETREE ?= " \
     digi/ccimx8mm-dvk.dtb \
     digi/_ov_board_flexspi_ccimx8m-dvk.dtbo \
     digi/_ov_board_gpio-watchdog_ccimx8m-dvk.dtbo \
+    digi/_ov_board_hsd101pfw2-lvds_ccimx8m-dvk.dtbo \
     digi/_ov_board_lvds_ccimx8m-dvk.dtbo \
     digi/_ov_board_user-leds_ccimx8m-dvk.dtbo \
     digi/_ov_som_bt_ccimx8m.dtbo \
