pulseaudio: launch pulseaudio in system mode
By launching in system mode it is possible to play music from a shell using
pulseaudio. With change all platforms and images (with or without graphical
support) have pulseaudio working.

https://onedigi.atlassian.net/browse/DEL-8417

Signed-off-by: Tatiana Leon <Tatiana.Leon@digi.com>

--- a/meta-digi-dey/recipes-multimedia/pulseaudio/pulseaudio/pulseaudio-system.service
+++ b/meta-digi-dey/recipes-multimedia/pulseaudio/pulseaudio/pulseaudio-system.service
@@ -4,7 +4,7 @@ After=dbus.service
 
 [Service]
 Type=forking
-PIDFile=/run/pulse.pid
+PIDFile=/run/pulse/pid
 ExecStart=/etc/pulseaudio-init
 ExecStop=kill -HUP $MAINPID
 
