ccmp1: add secure console support
Signed-off-by: Mike Engel <Mike.Engel@digi.com>

--- a/meta-digi-arm/conf/machine/ccmp13-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp13-dvk.conf
@@ -159,3 +159,7 @@ BOOTABLE_ARTIFACTS = " \
     arm-trusted-firmware/tf-a-ccmp13-dvk-nand.stm32 \
     fip/fip-ccmp13-dvk-optee.bin \
 "
+
+# TRUSTFENCE basic support
+# Alternatively, uncommment to enable the console with the specified GPIO
+# TRUSTFENCE_CONSOLE_GPIO_ENABLE_NAME ?= "GPIOB6"
