meta-digi: rework distro features configuration
Instead of changing POKY_DEFAULT_DISTRO_FEATURES, do the distro features
configuration directly in the DISTRO_FEATURES variable. Also, add a couple
of variables (MACHINE_DISTRO_FEATURES_ADD/REMOVE) that allow machines
for extra tweaking the distro features.

While on it, clean up some distro features:

  - pulseaudio: already added by DISTRO_FEATURES_BACKFILL
  - bluez5, splashscreen, initrd, gplv3: not used (dead code)

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-arm/conf/machine/ccmp13-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp13-dvk.conf
@@ -144,29 +144,9 @@ XBEE_TTY ?= "ttySTM2"
 # =========================================================================
 ALSA_LIST = ""
 
-# =========================================================================
-# DISTRO features
-# =========================================================================
-DISTRO_FEATURES:remove = " opengl "
-DISTRO_FEATURES:remove = " x11 "
-
-# add support of optee
-DISTRO_FEATURES:append = " optee "
-
-# add support of splashscreen
-#DISTRO_FEATURES:append = " splashscreen "
-
-# add support of systemd
-DISTRO_FEATURES:append = " systemd "
-
-# add support of efi
-DISTRO_FEATURES:append = " efi "
-
-# add support of InitRD installation package
-DISTRO_FEATURES:append = " initrd "
-
-# add support to pulseaudio
-DISTRO_FEATURES:append = "pulseaudio"
+# Per-machine DISTRO_FEATURES customization
+MACHINE_DISTRO_FEATURES_ADD = "efi optee"
+MACHINE_DISTRO_FEATURES_REMOVE = "gstreamer opengl vulkan wayland x11"
 
 # Disable use of vendorfs partition
 ST_VENDORFS = "0"
