networkmanager: customize unmanaged interfaces
https://onedigi.atlassian.net/browse/DEL-8346

Signed-off-by: Isaac Hermida <isaac.hermida@digi.com>

--- a/meta-digi-dey/recipes-connectivity/networkmanager/networkmanager/NetworkManager.conf
+++ b/meta-digi-dey/recipes-connectivity/networkmanager/networkmanager/NetworkManager.conf
@@ -8,7 +8,7 @@ rc-manager=file
 managed=false
 
 [keyfile]
-unmanaged-devices=interface-name:p2p*;interface-name:wlan1
+unmanaged-devices=##UNMANAGED_DEVICES##
 
 [device]
 wifi.scan-rand-mac-address=no
