--- a/meta-digi-arm/conf/machine/ccimx93-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccimx93-dvk.conf
@@ -11,7 +11,10 @@ UBOOT_DTB_NAME = "ccimx93-dvk.dtb"
 
 KERNEL_DEVICETREE ?= " \
     digi/ccimx93-dvk.dtb \
+    digi/_ov_board_enet2_ccimx93-dvk.dtbo \
     digi/_ov_board_lvds_ccimx93-dvk.dtbo \
+    digi/_ov_board_mikroe-accel2-click_ccimx93-dvk.dtbo \
+    digi/_ov_board_mikroe-gyro-click_ccimx93-dvk.dtbo \
     digi/_ov_som_bt_ccimx93.dtbo \
     digi/_ov_som_mca_ccimx93.dtbo \
     digi/_ov_som_wifi_ccimx93.dtbo \
