global: rename DEY_BUILD_PLATFORM to DEY_SOC_VENDOR
The name of the variable was not very intuitive of what
it contains. This variable expands to the SoC vendor
(NXP or STM).

Signed-off-by: Hector Palacios <hector.palacios@digi.com>

--- a/meta-digi-arm/conf/layer.conf
+++ b/meta-digi-arm/conf/layer.conf
@@ -19,8 +19,8 @@ BBFILES_DYNAMIC += " \
 "
 
 LAYERDEPENDS_digi-arm = "core"
-LAYERDEPENDS_digi-arm += "${@oe.utils.conditional('DEY_BUILD_PLATFORM', 'NXP', 'freescale-layer', '', d)}"
-LAYERDEPENDS_digi-arm += "${@oe.utils.conditional('DEY_BUILD_PLATFORM', 'STM', 'stm-st-stm32mp', '', d)}"
+LAYERDEPENDS_digi-arm += "${@oe.utils.conditional('DEY_SOC_VENDOR', 'NXP', 'freescale-layer', '', d)}"
+LAYERDEPENDS_digi-arm += "${@oe.utils.conditional('DEY_SOC_VENDOR', 'STM', 'stm-st-stm32mp', '', d)}"
 
 LAYERSERIES_COMPAT_digi-arm = "kirkstone"
 
