ccmp1: add BT Test overlay to the default images
Add the overlay required to perform the BLE HCI Raw test to the
linux default images. That way, default images can be used to certify
the product.

Signed-off-by: Gonzalo Ruiz <Gonzalo.Ruiz@digi.com>

--- a/meta-digi-arm/conf/machine/ccmp15-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp15-dvk.conf
@@ -47,6 +47,7 @@ STM32MP_KERNEL_DEVICETREE:ccmp15-dvk += " \
     _ov_board_mikroe-i2c-to-spi-click_ccmp15-dvk.dtbo \
     _ov_board_v1_ccmp15-dvk.dtbo \
     _ov_som_bt_ccmp15.dtbo \
+    _ov_som_bt_test_ccmp15.dtbo \
     _ov_som_wifi_ccmp15.dtbo \
 "
 
@@ -169,4 +170,3 @@ BOOT_DEV_NAME ?= "linux"
 ROOTFS_DEV_NAME ?= "rootfs"
 ROOTFS_ENC_DEV = "${ROOTFS_DEV_NAME}"
 ROOTFS_DEV_NAME_FINAL = "${@oe.utils.ifelse(d.getVar('TRUSTFENCE_ENCRYPT_ROOTFS') == '1', '${ROOTFS_ENC_DEV}', '${ROOTFS_DEV_NAME}')}"
-
