--- a/meta-digi-dey/recipes-digi/libdigiapix/libdigiapix-git/ccimx93-dvk/libdigiapix.conf
+++ b/meta-digi-dey/recipes-digi/libdigiapix/libdigiapix-git/ccimx93-dvk/libdigiapix.conf
@@ -1,24 +1,21 @@
 [board]
-model = Digi International ConnectCore 8M Mini DVK.
+model = Digi International ConnectCore 93 DVK.
 
 [GPIO]
 
 # USER LED1
-USER_LED = mca-gpio,12
-USER_LED1 = mca-gpio,12
+USER_LED1 = gpiochip2,7
 
 # USER_LED2
-USER_LED2 = mca-gpio,18
-
-# USER_LED3
-USER_LED3 = gpio2,19
+USER_LED = gpiochip3,23
+USER_LED2 = gpiochip3,23
 
 # USER BUTTON1
-USER_BUTTON = mca-gpio,10
-USER_BUTTON1 = mca-gpio,10
+USER_BUTTON = gpiochip2,7
+USER_BUTTON1 = gpiochip2,7
 
 # USER BUTTON2
-USER_BUTTON2 = gpio2,20
+USER_BUTTON2 = gpiochip3,23
 
 [I2C]
 
@@ -27,10 +24,10 @@ DEFAULT_I2C_BUS = 4
 
 [PWM]
 
-# PWM0 channel 1 USER_LED1.
+# PWM0 channel 1 - LVDS backlight.
 DEFAULT_PWM = 0,1
 
 [ADC]
 
-# MCA_IO1 (channel 1) at XBEE1_UART_TX. Not enabled by default.
-DEFAULT_ADC = 0,1
+# ADC channel 0 - Pin J48-1.
+DEFAULT_ADC = 0,0
