Remove meta-st-stm32mpu-ai dependency with st-openstlinux layer
This dependency is only required if you wish to build ST's reference images,
which isn't our case. Add said reference images' recipes to the BBMASK to
avoid build errors.

https://onedigi.atlassian.net/browse/DEL-8308

Signed-off-by: Gabriel Valcazar <gabriel.valcazar@digi.com>

--- a/meta-digi-arm/conf/layer.conf
+++ b/meta-digi-arm/conf/layer.conf
@@ -36,6 +36,13 @@ BBMASK += " \
     meta-st-stm32mp/recipes-core/systemd/systemd-conf_%.bbappend \
 "
 
+# Tweak stm32mpu-ai dependencies to use ST's machine learning packages
+LAYERDEPENDS_stm32mpu-ai:remove = "st-openstlinux"
+BBMASK += " \
+    meta-st-stm32mpu-ai/recipes-st/images/st-image-ai-userfs.bb \
+    meta-st-stm32mpu-ai/recipes-st/images/st-image-ai.bb \
+"
+
 # Digi's General and Open Source license agreements
 DIGI_EULA_FILE = "${LAYERDIR}/DIGI_EULA"
 DIGI_OPEN_EULA_FILE = "${LAYERDIR}/DIGI_OPEN_EULA"
