ccimx93: libdigiapix: fix default I2C bus
Signed-off-by: David Escalona <david.escalona@digi.com>

--- a/meta-digi-dey/recipes-digi/libdigiapix/libdigiapix-git/ccimx93-dvk/libdigiapix.conf
+++ b/meta-digi-dey/recipes-digi/libdigiapix/libdigiapix-git/ccimx93-dvk/libdigiapix.conf
@@ -19,8 +19,8 @@ USER_BUTTON2 = gpiochip3,23
 
 [I2C]
 
-# I2C-4 on Expansion connector.
-DEFAULT_I2C_BUS = 4
+# I2C-3 on MikroBus connector.
+DEFAULT_I2C_BUS = 2
 
 [PWM]
 
