connectcore-demo-server: start service after bluetooth
bluetooth daemon is a requisite for the demo app.

Signed-off-by: Isaac Hermida <isaac.hermida@digi.com>

--- a/meta-digi-dey/recipes-digi/dey-examples/connectcore-demo-example/connectcore-demo-server.service
+++ b/meta-digi-dey/recipes-digi/dey-examples/connectcore-demo-example/connectcore-demo-server.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Initialization of ConnectCore demo server
-After=busybox-httpd.service
+After=busybox-httpd.service bluetooth.service
 
 [Service]
 Type=forking
