--- a/meta-digi-dey/recipes-core/init-ifupdown/init-ifupdown-1.0/interfaces.br0.example
+++ b/meta-digi-dey/recipes-core/init-ifupdown/init-ifupdown-1.0/interfaces.br0.example
@@ -1,5 +1,5 @@
 
-## Example bridge between eth0 and wlan1 (Qualcomm QCA65x4)
+## Example bridge between eth0 and wlan1
 #auto br0
 #iface br0 inet static
 #	bridge_ports eth0 wlan1
