arm-compute-library: remove MAXLINELENGTH variable to avoid build errors
Commit d2c1494bbf36b6392e47ffd4a75307d29681d190 in poky adds this variable
to EXTRA_OESCONS, which breaks the do_compile() task of this recipe. Remove
the variable to be able to build the package.

Signed-off-by: Gabriel Valcazar <gabriel.valcazar@digi.com>

--- a/meta-digi-dey/conf/layer.conf
+++ b/meta-digi-dey/conf/layer.conf
@@ -12,6 +12,8 @@ BBFILES_DYNAMIC += " \
     selinux:${LAYERDIR}/dynamic-layers/selinux/*/*/*.bbappend \
     freescale-layer:${LAYERDIR}/dynamic-layers/freescale-layer/*/*/*.bb \
     freescale-layer:${LAYERDIR}/dynamic-layers/freescale-layer/*/*/*.bbappend \
+    meta-ml:${LAYERDIR}/dynamic-layers/meta-ml/*/*/*.bb \
+    meta-ml:${LAYERDIR}/dynamic-layers/meta-ml/*/*/*.bbappend \
     stm-st-stm32mp:${LAYERDIR}/dynamic-layers/stm-st-stm32mp/*/*/*.bb \
     stm-st-stm32mp:${LAYERDIR}/dynamic-layers/stm-st-stm32mp/*/*/*.bbappend \
     stm32mpu-ai:${LAYERDIR}/dynamic-layers/stm32mpu-ai/*/*/*.bb \
