ccimx93: add MIPI display overlay
Support for DLC0200CC904DF-2 panel has been added in the kernel.

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx93-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccimx93-dvk.conf
@@ -16,6 +16,7 @@ UBOOT_DTB_NAME = "ccimx93-dvk.dtb"
 
 KERNEL_DEVICETREE ?= " \
     digi/ccimx93-dvk.dtb \
+    digi/_ov_board_dsi_display_ccimx93-dvk.dtbo \
     digi/_ov_board_enet2_ccimx93-dvk.dtbo \
     digi/_ov_board_lvds_ccimx93-dvk.dtbo \
     digi/_ov_board_mikroe-accel2-click_ccimx93-dvk.dtbo \
