ccimx8mn-dvk: fix MACHINEOVERRIDES value
We accidentally used "mx8mm" instead of "mx8mn" in commit
9b165196bb21644e5c053fbc3c20cc13f3b171cf, which caused several elements to stop
working on the target (including the optee-os).

https://onedigi.atlassian.net/browse/DEL-8512

Signed-off-by: Gabriel Valcazar <gabriel.valcazar@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx8mn-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccimx8mn-dvk.conf
@@ -3,7 +3,7 @@
 #@DESCRIPTION: Machine configuration for Digi's ConnectCore 8M Nano DVK.
 
 DIGI_SOM = "ccimx8mn"
-MACHINEOVERRIDES =. "mx8:mx8m:mx8mm:${DIGI_FAMILY}:${DIGI_SOM}:"
+MACHINEOVERRIDES =. "mx8:mx8m:mx8mn:${DIGI_FAMILY}:${DIGI_SOM}:"
 
 # Include the machine configuration for Digi's ConnectCore 8M module.
 include conf/machine/include/ccimx8m.inc
