machine: swap ccmp15/13 console GPIO enable pins
This commit swaps the GPIO pin used to enable
serial console when secure console is activated.

Signed-off-by: Mike Engel <Mike.Engel@digi.com>

--- a/meta-digi-arm/conf/machine/ccmp13-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp13-dvk.conf
@@ -162,4 +162,4 @@ BOOTABLE_ARTIFACTS = " \
 
 # TRUSTFENCE basic support
 # Alternatively, uncommment to enable the console with the specified GPIO
-# TRUSTFENCE_CONSOLE_GPIO_ENABLE_NAME ?= "GPIOB6"
+# TRUSTFENCE_CONSOLE_GPIO_ENABLE_NAME ?= "GPIOA5"
