--- a/meta-digi-arm/conf/machine/ccmp15-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp15-dvk.conf
@@ -166,4 +166,4 @@ BOOTABLE_ARTIFACTS = " \
 
 # TRUSTFENCE basic support
 # Alternatively, uncommment to enable the console with the specified GPIO
-# TRUSTFENCE_CONSOLE_GPIO_ENABLE_NAME ?= "GPIOA5"
+# TRUSTFENCE_CONSOLE_GPIO_ENABLE_NAME ?= "GPIOB6"
