readonly: add default configuration for overlayfs_etc
When EXTRA_IMAGE_FEATURES += "overlayfs-etc" is added these
configurations are needed to compile. They are provided with
the default configuration to work with our software.

The user can modify them in their local.conf if needed.

https://onedigi.atlassian.net/browse/DEL-8552

Signed-off-by: Francisco Gil <francisco.gilmartinez@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx6qpsbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6qpsbc.conf
@@ -55,3 +55,8 @@ BOOTABLE_ARTIFACTS = " \
     u-boot-ccimx6qpsbc1GB.imx \
     u-boot-ccimx6qpsbc2GB.imx \
 "
+
+# Default overlayfs_etc mount point and type
+OVERLAYFS_ETC_MOUNT_POINT ?= "/mnt/data"
+OVERLAYFS_ETC_DEVICE ?= "/dev/mmcblk0p7"
+OVERLAYFS_ETC_FSTYPE ?= "ext4"
