--- a/meta-digi-arm/conf/machine/ccimx6sbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6sbc.conf
@@ -60,3 +60,8 @@ BOOTABLE_ARTIFACTS = " \
     u-boot-ccimx6qsbc512MB.imx \
     u-boot-ccimx6qsbc.imx \
 "
+
+# Default overlayfs_etc mount point and type
+OVERLAYFS_ETC_MOUNT_POINT ?= "/mnt/data"
+OVERLAYFS_ETC_DEVICE ?= "/dev/mmcblk0p7"
+OVERLAYFS_ETC_FSTYPE ?= "ext4"
