--- a/meta-digi-arm/conf/machine/ccimx8mm-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccimx8mm-dvk.conf
@@ -54,3 +54,8 @@ IMAGE_FSTYPES ?= '${@bb.utils.contains("IMAGE_FEATURES", "read-only-rootfs", \
 
 # Boot artifacts to be copied from the deploy dir to the installer ZIP
 BOOTABLE_ARTIFACTS = "imx-boot-ccimx8mm-dvk.bin"
+
+# Default overlayfs_etc mount point and type
+OVERLAYFS_ETC_MOUNT_POINT ?= "/mnt/data"
+OVERLAYFS_ETC_DEVICE ?= "/dev/mmcblk0p7"
+OVERLAYFS_ETC_FSTYPE ?= "ext4"
