--- a/meta-digi-arm/conf/machine/ccimx8x-sbc-pro.conf
+++ b/meta-digi-arm/conf/machine/ccimx8x-sbc-pro.conf
@@ -58,3 +58,8 @@ BOOTABLE_ARTIFACTS = " \
     imx-boot-ccimx8x-sbc-pro-C0-2GB_32bit.bin \
     imx-boot-ccimx8x-sbc-pro-C0-512MB_16bit.bin \
 "
+
+# Default overlayfs_etc mount point and type
+OVERLAYFS_ETC_MOUNT_POINT ?= "/mnt/data"
+OVERLAYFS_ETC_DEVICE ?= "/dev/mmcblk0p7"
+OVERLAYFS_ETC_FSTYPE ?= "ext4"
