--- a/meta-digi-arm/conf/machine/ccmp13-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp13-dvk.conf
@@ -163,3 +163,8 @@ BOOTABLE_ARTIFACTS = " \
 # TRUSTFENCE basic support
 # Alternatively, uncommment to enable the console with the specified GPIO
 # TRUSTFENCE_CONSOLE_GPIO_ENABLE_NAME ?= "GPIOA5"
+
+# Default overlayfs_etc mount point and type
+OVERLAYFS_ETC_MOUNT_POINT ?= "/mnt/data"
+OVERLAYFS_ETC_DEVICE ?= "ubi0:data"
+OVERLAYFS_ETC_FSTYPE ?= "ubifs"
