ccmp15: add MCA DT overlay support
This commit modifies the boot script condition to apply the overlay for MCA
based on HWID MCA field.

https://onedigi.atlassian.net/browse/DEL-8521

Signed-off-by: Arturo Buzarra <arturo.buzarra@digi.com>

--- a/meta-digi-arm/conf/machine/ccmp15-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp15-dvk.conf
@@ -50,6 +50,7 @@ STM32MP_KERNEL_DEVICETREE:ccmp15-dvk += " \
     _ov_board_v1_ccmp15-dvk.dtbo \
     _ov_som_bt_ccmp15.dtbo \
     _ov_som_bt_test_ccmp15.dtbo \
+    _ov_som_mca_ccmp15.dtbo \
     _ov_som_wifi_ccmp15.dtbo \
 "
 
