Add meta-st-stm32mpu-ai layer to ST platforms
This layer provides machine learning functionality, so include it in our
default layers so customers can use it out of the box if wanted.

https://onedigi.atlassian.net/browse/DEL-8551

Signed-off-by: Gabriel Valcazar <gabriel.valcazar@digi.com>

--- a/sdk/config/ccmp13-dvk/bblayers.conf.sample
+++ b/sdk/config/ccmp13-dvk/bblayers.conf.sample
@@ -18,6 +18,7 @@ BBLAYERS ?= " \
   ##DIGIBASE##/meta-webkit \
   ##DIGIBASE##/meta-timesys \
   ##DIGIBASE##/meta-st-stm32mp \
+  ##DIGIBASE##/meta-st-stm32mpu-ai \
   ##DIGIBASE##/meta-digi/meta-digi-arm \
   ##DIGIBASE##/meta-digi/meta-digi-dey \
   "
