--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -1,8 +1,18 @@
 require conf/distro/poky.conf
 
+# Discrete version values.
+YOCTO_MAJOR = "4"
+YOCTO_MINOR = "0"
+DEY_RELEASE = "4"
+DEY_BUILD = "1"
+
+# Firmware version of the system.
+DEY_FIRMWARE_VERSION ?= "${YOCTO_MAJOR}.${YOCTO_MINOR}.${DEY_RELEASE}.${DEY_BUILD}"
+
+# Distribution info.
 DISTRO = "dey"
 DISTRO_NAME = "Digi Embedded Yocto"
-DISTRO_VERSION = "4.0-r4"
+DISTRO_VERSION = "${YOCTO_MAJOR}.${YOCTO_MINOR}-r${DEY_RELEASE}"
 
 SDK_VENDOR = "-deysdk"
 
