weston: readonly: change default log path to /tmp/
Weston is not launched in read-only filesystem because /home/root
is not a writable path.

Signed-off-by: Francisco Gil <francisco.gilmartinez@digi.com>

--- a/meta-digi-arm/dynamic-layers/stm-st-stm32mp/recipes-graphics/wayland/weston-init/weston-launch.service
+++ b/meta-digi-arm/dynamic-layers/stm-st-stm32mp/recipes-graphics/wayland/weston-init/weston-launch.service
@@ -33,8 +33,8 @@ EnvironmentFile=-/etc/default/weston
 Environment="XDG_RUNTIME_DIR=/home/root"
 Environment="WESTON_USER=root"
 Environment="WL_EGL_GBM_FENCE=0"
-#ExecStart=/usr/bin/weston-launch -- --modules=systemd-notify.so --log=/home/weston/weston.log $OPTARGS
-ExecStart=/usr/bin/weston-start --modules=systemd-notify.so --log=/home/root/weston.log $OPTARGS
+#ExecStart=/usr/bin/weston-launch -- --modules=systemd-notify.so --log=/tmp/weston.log $OPTARGS
+ExecStart=/usr/bin/weston-start --modules=systemd-notify.so --log=/tmp/weston.log $OPTARGS
 ExecStop=/usr/bin/killall weston-launch
 
 # Optional watchdog setup
