--- a/meta-digi-dey/recipes-support/swupdate/swupdate/mtd.cfg
+++ b/meta-digi-dey/recipes-support/swupdate/swupdate/mtd.cfg
@@ -1,2 +1,8 @@
 # Add MTD support
 CONFIG_MTD=y
+# Add UBI support
+CONFIG_UBIVOL=y
+CONFIG_UBIATTACH=y
+CONFIG_UBIBLACKLIST=""
+CONFIG_UBIWHITELIST=""
+CONFIG_UBIVIDOFFSET=0
