Rework ccimx8x imx-boot/u-boot recipes to reduce number of imx-boot artifacts
Now that both U-Boot and the SCFW can autodetect the RAM configuration, we can
simplify the imx-boot build process to generate two binaries (one per SOC
revision) instead of eight. Build "flash_spl" imx-boot images and use only one
global defconfig for u-boot.

Signed-off-by: Gabriel Valcazar <gabriel.valcazar@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx8x-sbc-pro.conf
+++ b/meta-digi-arm/conf/machine/ccimx8x-sbc-pro.conf
@@ -7,10 +7,9 @@ include conf/machine/include/ccimx8x.inc
 
 # U-Boot configurations
 # Last one is the default (the one the symlinks point at)
-UBOOT_CONFIG ??= "ccimx8x_sbc_pro512MB ccimx8x_sbc_pro1GB ccimx8x_sbc_pro2GB"
-UBOOT_CONFIG[ccimx8x_sbc_pro2GB] = "ccimx8x_sbc_pro2GB_defconfig,,u-boot-dtb.${UBOOT_SUFFIX}"
-UBOOT_CONFIG[ccimx8x_sbc_pro1GB] = "ccimx8x_sbc_pro1GB_defconfig,,u-boot-dtb.${UBOOT_SUFFIX}"
-UBOOT_CONFIG[ccimx8x_sbc_pro512MB] = "ccimx8x_sbc_pro512MB_defconfig,,u-boot-dtb.${UBOOT_SUFFIX}"
+UBOOT_CONFIG ??= "ccimx8x_sbc_pro"
+UBOOT_CONFIG[ccimx8x_sbc_pro] = "ccimx8x_sbc_pro_defconfig,,u-boot-dtb.${UBOOT_SUFFIX}"
+SPL_BINARY = "spl/u-boot-spl.bin"
 
 KERNEL_DEVICETREE ?= " \
     digi/ccimx8x-sbc-pro.dtb \
@@ -49,14 +48,8 @@ IMAGE_FSTYPES ?= '${@bb.utils.contains("IMAGE_FEATURES", "read-only-rootfs", \
 
 # Boot artifacts to be copied from the deploy dir to the installer ZIP
 BOOTABLE_ARTIFACTS = " \
-    imx-boot-ccimx8x-sbc-pro-B0-1GB_16bit.bin \
-    imx-boot-ccimx8x-sbc-pro-B0-1GB_32bit.bin \
-    imx-boot-ccimx8x-sbc-pro-B0-2GB_32bit.bin \
-    imx-boot-ccimx8x-sbc-pro-B0-512MB_16bit.bin \
-    imx-boot-ccimx8x-sbc-pro-C0-1GB_16bit.bin \
-    imx-boot-ccimx8x-sbc-pro-C0-1GB_32bit.bin \
-    imx-boot-ccimx8x-sbc-pro-C0-2GB_32bit.bin \
-    imx-boot-ccimx8x-sbc-pro-C0-512MB_16bit.bin \
+    imx-boot-ccimx8x-sbc-pro-B0.bin \
+    imx-boot-ccimx8x-sbc-pro-C0.bin \
 "
 
 # Default overlayfs_etc mount point and type
