--- a/meta-digi-arm/conf/machine/ccimx8x-sbc-express.conf
+++ b/meta-digi-arm/conf/machine/ccimx8x-sbc-express.conf
@@ -6,11 +6,9 @@
 include conf/machine/include/ccimx8x.inc
 
 # U-Boot configurations
-# Last one is the default (the one the symlinks point at)
-UBOOT_CONFIG ??= "ccimx8x_sbc_express512MB ccimx8x_sbc_express1GB ccimx8x_sbc_express2GB"
-UBOOT_CONFIG[ccimx8x_sbc_express2GB] = "ccimx8x_sbc_express2GB_defconfig,,u-boot-dtb.${UBOOT_SUFFIX}"
-UBOOT_CONFIG[ccimx8x_sbc_express1GB] = "ccimx8x_sbc_express1GB_defconfig,,u-boot-dtb.${UBOOT_SUFFIX}"
-UBOOT_CONFIG[ccimx8x_sbc_express512MB] = "ccimx8x_sbc_express512MB_defconfig,,u-boot-dtb.${UBOOT_SUFFIX}"
+UBOOT_CONFIG ??= "ccimx8x_sbc_express"
+UBOOT_CONFIG[ccimx8x_sbc_express] = "ccimx8x_sbc_express_defconfig,,u-boot-dtb.${UBOOT_SUFFIX}"
+SPL_BINARY = "spl/u-boot-spl.bin"
 
 KERNEL_DEVICETREE ?= " \
     digi/ccimx8x-sbc-express.dtb \
@@ -36,12 +34,6 @@ IMAGE_FSTYPES ?= '${@bb.utils.contains("IMAGE_FEATURES", "read-only-rootfs", \
 
 # Boot artifacts to be copied from the deploy dir to the installer ZIP
 BOOTABLE_ARTIFACTS = " \
-    imx-boot-ccimx8x-sbc-express-B0-1GB_16bit.bin \
-    imx-boot-ccimx8x-sbc-express-B0-1GB_32bit.bin \
-    imx-boot-ccimx8x-sbc-express-B0-2GB_32bit.bin \
-    imx-boot-ccimx8x-sbc-express-B0-512MB_16bit.bin \
-    imx-boot-ccimx8x-sbc-express-C0-1GB_16bit.bin \
-    imx-boot-ccimx8x-sbc-express-C0-1GB_32bit.bin \
-    imx-boot-ccimx8x-sbc-express-C0-2GB_32bit.bin \
-    imx-boot-ccimx8x-sbc-express-C0-512MB_16bit.bin \
+    imx-boot-ccimx8x-sbc-express-B0.bin \
+    imx-boot-ccimx8x-sbc-express-C0.bin \
 "
