meta-digi-dey: swupdate: add 'UBIVOL_RDIFFHANDLER' support to MTD based systems
Writing directly into UBI volumes is not allowed, so a special 'rdiff' handler capable of
write data in UBI volumes is required. This commits adds the new handler and enables it in
MTD based systems.

https://onedigi.atlassian.net/browse/DEL-8624

Signed-off-by: David Escalona <david.escalona@digi.com>

--- a/meta-digi-dey/recipes-support/swupdate/swupdate/mtd.cfg
+++ b/meta-digi-dey/recipes-support/swupdate/swupdate/mtd.cfg
@@ -6,3 +6,5 @@ CONFIG_UBIATTACH=y
 CONFIG_UBIBLACKLIST=""
 CONFIG_UBIWHITELIST=""
 CONFIG_UBIVIDOFFSET=0
+# Add UBIVOL_RDIFFHANDLER support
+CONFIG_UBIVOL_RDIFFHANDLER=y
