sound: max98088: update card name
Starting at kernel 6.1, the maxim98088 driver has been migrated
from the old imx-max98088.c driver to NXP’s new audio framework
fsl-asoc-card.c.
Update the sound stuff to match the new audio card and some of
the new controls.

https://onedigi.atlassian.net/browse/DEL-8596

Signed-off-by: Isaac Hermida <isaac.hermida@digi.com>

--- a/meta-digi-arm/recipes-bsp/alsa-state/alsa-state/ccimx93/asound.conf
+++ b/meta-digi-arm/recipes-bsp/alsa-state/alsa-state/ccimx93/asound.conf
@@ -1,9 +1,9 @@
-pcm.imxmax98088 {
+pcm.max98088audio {
     type hw
     card 0
 }
-ctl.imxmax98088 {
+ctl.max98088audio {
     type hw
     card 0
 }
-ctl.!default imxmax98088
+ctl.!default max98088audio
