ccimx93-dvk.conf: define bootloader seek
Define the bootloader seek variable to generate a booteable sdcard image.

https://onedigi.atlassian.net/browse/DEL-8461

Signed-off-by: Isaac Hermida <isaac.hermida@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx93-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccimx93-dvk.conf
@@ -14,6 +14,9 @@ UBOOT_CONFIG ??= "ccimx93-dvk"
 UBOOT_CONFIG[ccimx93-dvk] = "ccimx93-dvk_defconfig"
 UBOOT_DTB_NAME = "ccimx93-dvk.dtb"
 
+BOOTLOADER_SEEK_USERDATA = "32"
+BOOTLOADER_SEEK_BOOT = "0"
+
 KERNEL_DEVICETREE ?= " \
     digi/ccimx93-dvk.dtb \
     digi/_ov_board_dsi_display_ccimx93-dvk.dtbo \
