hostapd: ccimx93: add code for WPA3 strict mode
Signed-off-by: Isaac Hermida <isaac.hermida@digi.com>

--- a/meta-digi-dey/recipes-connectivity/hostapd/hostapd/hostapd_uap0.conf
+++ b/meta-digi-dey/recipes-connectivity/hostapd/hostapd/hostapd_uap0.conf
@@ -9,7 +9,7 @@ ssid=ap-uap0-##MAC##
 # 802.11a (5 GHz) mode
 hw_mode=a
 
-# Set the channel to use. If 0 (ACS), channel will be automatically selected
+# Specify the channel to use. If 0 (ACS), channel will be automatically selected
 channel=44
 
 # IEEE 802.11i, WPA2 encryption with PSK authentication
@@ -19,9 +19,16 @@ wpa_key_mgmt=WPA-PSK
 wpa_pairwise=CCMP
 wpa_passphrase=password-wpa2aes
 
-# Uncomment to enable WPA3-SAE authentication
+# Uncomment to enable WPA3-SAE authentication (mixed with WPA2 encryption)
 # wpa_key_mgmt=WPA-PSK SAE
 # sae_password=password-wpa3sae
+
+
+# Uncomment to enable only WPA3 encryption (and comment previous WPA2 encryption block)
+# ieee80211w=2
+# rsn_pairwise=CCMP
+# wpa_key_mgmt=SAE
+# wpa_passphrase=password-wpa3only
 
 # IEEE 802.11n (Wi-Fi 4) features
 ieee80211n=1
