meta-digi-dey: upgrade QT6 to version 6.5
QT v6.5 is a long term support (LTS) and is the version used in newer
releases from NXP (based on Yocto 4.2 mickledore)

This commit basically backports the QT v6.5 from meta-freescale community
layer (mickledore) with some recipe's polishing from meta-imx.

https://onedigi.atlassian.net/browse/DEL-8675

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -71,3 +71,9 @@ LICENSE_FLAGS_ACCEPTED += "commercial"
 
 # Use systemd init manager by default
 INIT_MANAGER ?= "systemd"
+
+# Enable examples for some QT packages
+PACKAGECONFIG:append:class-target:pn-qtbase        = " examples"
+PACKAGECONFIG:append:class-target:pn-qtdeclarative = " examples"
+PACKAGECONFIG:append:class-target:pn-qtquick3d     = " examples"
+PACKAGECONFIG:append:class-target:pn-qtwebengine   = " examples"
