--- a/meta-digi-arm/conf/machine/ccmp13-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp13-dvk.conf
@@ -114,6 +114,7 @@ OPTEE_CONF = "ccmp13-dvk"
 KERNEL_IMAGETYPE = "zImage"
 KERNEL_ALT_IMAGETYPE = "Image uImage vmlinux"
 KERNEL_DEFCONFIG ?= "ccmp1_defconfig"
+KERNEL_EXTERNAL_DEFCONFIG ?= "defconfig"
 ST_KERNEL_LOADADDR ?= "0xC0008000"
 
 # =========================================================================
