--- a/meta-digi-arm/conf/machine/ccmp13-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp13-dvk.conf
@@ -96,7 +96,7 @@ ST_DEBUG_TRACE = "0"
 # trusted-firmware-a
 # =========================================================================
 # Configure trusted-firmware-a build
-DEY_TF_A_CONFIG ?= "optee nand"
+TF_A_CONFIG ?= "optee nand"
 
 # =========================================================================
 # optee
