--- a/meta-digi-arm/conf/machine/ccmp15-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp15-dvk.conf
@@ -17,8 +17,9 @@ MACHINEOVERRIDES = "arm:armv7ve:stcommon:stm32mpcommon:stm32mp1common:${DIGI_FAM
 # =========================================================================
 # boot device
 # =========================================================================
-# Configure the list of boards that enable NAND
+# Configure the list of boards that enable NAND/SDCARD
 DEVICE_BOARD_ENABLE:NAND   += "ccmp15-dvk"
+DEVICE_BOARD_ENABLE:SDCARD += "${@bb.utils.contains('BOOTDEVICE_LABELS', 'sdcard', 'ccmp15-dvk', '', d)}"
 
 # =========================================================================
 # U-Boot configs
