ccimx93-dvk: fix machine overrides order
ARM64 generic overrides where in the middle of the chain with more
precedence than IMX overrides.

From:
MACHINEOVERRIDES="imx-generic-bsp:imx-nxp-bsp:imxdrm:imxpxp:mx9-generic-bsp:mx9-nxp-bsp:mx93-generic-bsp:mx93-nxp-bsp:ccimx93:ccimx93:aarch64:armv8-2a:use-nxp-bsp:ccimx93-dvk"

To:
MACHINEOVERRIDES="aarch64:armv8-2a:use-nxp-bsp:imx-generic-bsp:imx-nxp-bsp:imxdrm:imxpxp:mx9-generic-bsp:mx9-nxp-bsp:mx93-generic-bsp:mx93-nxp-bsp:ccimx93:ccimx93:ccimx93-dvk"

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx93-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccimx93-dvk.conf
@@ -3,11 +3,9 @@
 #@DESCRIPTION: Machine configuration for Digi's ConnectCore 93 DVK
 
 DIGI_SOM = "ccimx93"
+MACHINEOVERRIDES =. "mx93:${DIGI_FAMILY}:${DIGI_SOM}:"
 
 require include/ccimx93.inc
-
-MACHINEOVERRIDES =. "${DIGI_FAMILY}:${DIGI_SOM}:"
-MACHINEOVERRIDES =. "mx93:"
 
 # U-Boot configurations
 UBOOT_CONFIG ??= "ccimx93-dvk"
