--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -77,3 +77,7 @@ PACKAGECONFIG:append:class-target:pn-qtbase        = " examples"
 PACKAGECONFIG:append:class-target:pn-qtdeclarative = " examples"
 PACKAGECONFIG:append:class-target:pn-qtquick3d     = " examples"
 PACKAGECONFIG:append:class-target:pn-qtwebengine   = " examples"
+# libarchive is using "zstd" in its package config.
+# This is not used in the swupdate that is the only consumer of the libarchive package.
+# Remove it to reduce the size of the recovery image.
+PACKAGECONFIG:remove:class-target:pn-libarchive   = " zstd"
