--- a/meta-digi-arm/conf/machine/ccmp13-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp13-dvk.conf
@@ -60,7 +60,7 @@ MACHINE_FEATURES += "wifi"
 # =========================================================================
 # Firmware
 # =========================================================================
-MACHINE_FIRMWARE:append = " firmware-murata firmware-murata-mfgtest"
+MACHINE_FIRMWARE:append = " firmware-murata-infineon firmware-murata-infineon-mfgtest"
 
 MACHINE_EXTRA_RRECOMMENDS += " \
     ${MACHINE_FIRMWARE} \
