Add support for dey-image-lvgl images
LVGL is a free and open-source embedded graphics library that is able to run
in environments with limited resources.

This image includes a desktop environment and an LVGL widget demo (lvgl_demo)

https://onedigi.atlassian.net/browse/DEL-8740

Signed-off-by: Gabriel Valcazar <gabriel.valcazar@digi.com>

--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -45,6 +45,7 @@ FEATURE_PACKAGES_dey-crank = "packagegroup-dey-crank"
 FEATURE_PACKAGES_dey-debug = "packagegroup-dey-debug"
 FEATURE_PACKAGES_dey-examples = "packagegroup-dey-examples"
 FEATURE_PACKAGES_dey-gstreamer = "packagegroup-dey-gstreamer"
+FEATURE_PACKAGES_dey-lvgl = "packagegroup-dey-lvgl"
 FEATURE_PACKAGES_dey-network = "packagegroup-dey-network"
 FEATURE_PACKAGES_dey-qt = "packagegroup-dey-qt"
 FEATURE_PACKAGES_dey-trustfence = "packagegroup-dey-trustfence"
