ccimx93: enable the build of A0 SOC revision bootloader
Implement support to program the correct bootloader on the different
installation scripts.

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx93-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccimx93-dvk.conf
@@ -56,7 +56,10 @@ IMAGE_FSTYPES ?= '${@bb.utils.contains("IMAGE_FEATURES", "read-only-rootfs", \
 				       "boot.vfat recovery.vfat ext4.gz tar.bz2 sdcard.gz", d)}'
 
 # Boot artifacts to be copied from the deploy dir to the installer ZIP
-BOOTABLE_ARTIFACTS = "imx-boot-ccimx93-dvk.bin"
+BOOTABLE_ARTIFACTS = " \
+    imx-boot-ccimx93-dvk.bin \
+    imx-boot-ccimx93-dvk-A0.bin \
+"
 
 # Default overlayfs_etc mount point and type
 OVERLAYFS_ETC_MOUNT_POINT ?= "/mnt/data"
