ccmp1: add DT overlay for the DVK v2
This commit adds several overlays for DVK v2 and modifies the boot script to apply it
based on the board_version variable.

https://onedigi.atlassian.net/browse/DEL-8746

Signed-off-by: Arturo Buzarra <arturo.buzarra@digi.com>

--- a/meta-digi-arm/conf/machine/ccmp15-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp15-dvk.conf
@@ -49,6 +49,7 @@ STM32MP_KERNEL_DEVICETREE:ccmp15-dvk += " \
     _ov_board_mikroe-gyro-click_ccmp15-dvk.dtbo \
     _ov_board_mikroe-i2c-to-spi-click_ccmp15-dvk.dtbo \
     _ov_board_v1_ccmp15-dvk.dtbo \
+    _ov_board_v2_ccmp15-dvk.dtbo \
     _ov_som_bt_ccmp15.dtbo \
     _ov_som_bt_test_ccmp15.dtbo \
     _ov_som_mca_ccmp15.dtbo \
