ccmp1: remove dependencies from kernel include file from meta-st-stm32mp
An anonymous function in linux-stm32mp.inc produces a bbfatal error when
KERNEL_DEVICETREE variable contains more than one device tree. This is our
case since we build the main DT plus a number of DT overlays.
This commit removes the dependency to this include file since we have our
own recipe to build the kernel and it is not needed at all.
It also removes the build of a uImage and the need to provide a
LOADADDR.

Signed-off-by: Hector Palacios <hector.palacios@digi.com>

--- a/meta-digi-arm/conf/layer.conf
+++ b/meta-digi-arm/conf/layer.conf
@@ -45,6 +45,7 @@ BBMASK += " \
     meta-st-stm32mp/recipes-core/base-files/base-files_%.bbappend \
     meta-st-stm32mp/recipes-core/busybox/busybox_%.bbappend \
     meta-st-stm32mp/recipes-core/systemd/systemd-conf_%.bbappend \
+    meta-st-stm32mp/recipes-kernel/linux/linux-stm32mp_5.15.bb \
 "
 
 # Tweak stm32mpu-ai dependencies to use ST's machine learning packages
