--- a/meta-digi-arm/conf/machine/ccmp13-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp13-dvk.conf
@@ -111,10 +111,9 @@ OPTEE_CONF = "ccmp13-dvk"
 # =========================================================================
 KERNEL_IMAGETYPE = "${@bb.utils.contains('TRUSTFENCE_FIT_IMG', '1', 'fitImage', 'zImage', d)}"
 KERNEL_CLASSES = "${@bb.utils.contains('TRUSTFENCE_FIT_IMG', '1', 'kernel-fitimage', 'kernel-uimage', d)}"
-KERNEL_ALT_IMAGETYPE = "Image uImage vmlinux"
+KERNEL_ALT_IMAGETYPE = "Image vmlinux"
 KERNEL_DEFCONFIG ?= "ccmp1_defconfig"
 KERNEL_EXTERNAL_DEFCONFIG ?= "defconfig"
-ST_KERNEL_LOADADDR ?= "0xC0008000"
 
 # =========================================================================
 # DEY settings
